Todas as APIs foram agrupadas excerto pela autenticação #31 #21
