# api/app.js
@@ -11,8 +11,13 @@ catch (err) {
     console.log(err)
 }
 
+const userRouter = require('./routes/router_user');
+const authRouter = require('./routes/auth');
 const routerApidocs = require('./routes/route_apidocs')
 const routerAgenda = require("./routes/router_agenda")
+const AmigosRouter = require('./routes/AmigosRoutes')
+const routerFesta = require('./routes/servico')
+
 
 var app = express();
 
@@ -23,6 +28,10 @@ app.use(cookieParser());
 
 app.use('/api-docs', routerApidocs);
 app.use("/agenda", routerAgenda)
+app.use('/user', userRouter);
+app.use('/auth', authRouter);
+app.use('/Amigos', AmigosRouter)
+app.use('/services', routerFesta)
 
 
 module.exports = app;
